# X-Voice

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
GP/src/configs/: F5TTS_v1_Base_debug_Emilia_gp_inference.yaml  F5TTS_v1_Base_debug_Emilia_pinyin.yaml
GP/src/model/: cfm.py  dataset.py  inferencer_gp.py
GP/src/train/: inference_gp.py
GP/src/train/datasets/: prepare_emilia_gp_inference.py
Multilingual/: README.md  clean_ko.py  clean_vox.py  get_testset.py  get_testset_sample10.py  get_trainset.py  get_trainset_lemas.sh  prepare_ipa.sh
Multilingual/data/multilingual_full_clean_ipa_v6/: vocab.txt  vocab_stats.txt
Multilingual/data/multilingual_stress_ipa_v6/: vocab.txt  vocab_stats.txt
Multilingual/src/f5_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Multilingual/src/f5_tts/configs/: F5TTS_Small.yaml  F5TTS_Small_libritts_ipa.yaml  F5TTS_v1_Base_multilingual_ada.yaml  F5TTS_v1_Base_multilingual_ctc.yaml  F5TTS_v1_Base_multilingual_full_catada.yaml  F5TTS_v1_Base_multilingual_full_catada_stress_nomask.yaml  F5TTS_v1_Base_multilingual_langipa.yaml  F5TTS_v1_Base_multilingual_tkncat.yaml  F5TTS_v1_Base_multilingual_tkncat500m.yaml  F5TTS_v1_Base_multilingual_tkncatv2.yaml  F5TTS_v1_Base_multilingual_v4.yaml  F5TTS_v1_Base_multilingual_v5.yaml  M3TTS_Base_multilingual_v1.yaml  M3TTS_Small.yaml  M3TTS_Small_multilingual_v1.yaml  SpeedPredict_Base.yaml
Multilingual/src/f5_tts/configs/.ipynb_checkpoints/: F5TTS_v1_Base-checkpoint.yaml  F5TTS_v1_Base_multilingual_v4-checkpoint.yaml
Multilingual/src/f5_tts/eval/: collect_results.py  eval_cross_lingual.sh  eval_infer_batch.py  eval_infer_batch.sh  eval_infer_batch_qingyu.py  eval_multilingaul_sft.sh  eval_multilingual.sh  eval_multilingual_gt.sh  eval_multilingual_infer_only.sh  eval_seedtts.sh  eval_seedtts_testset.py  eval_similarity.py  eval_utmos.py  module_clf5.py  requirements.txt  speaking_rate_predictor.py  text_normalizer.py  utils_eval.py  utils_eval_qingyu.py
Multilingual/src/f5_tts/eval/utils/: average_wer.py  cal_sim.sh  cal_wer.sh  get_wav_res_ref_text.py  get_wav_res_ref_text_gt.py  run_wer.py
Multilingual/src/f5_tts/infer/: infer_cli.py  infer_cli_droptext.py  infer_cli_droptext_split.py  infer_cli_droptext_split_old.py  module_clf5.py  speech_edit.py  test.py  utils_infer.py
Multilingual/src/f5_tts/model/: __init__.py  cfm.py  cfm_sft.py  dataset.py  inferencer_gp.py  modules.py  trainer.py  utils.py
Multilingual/src/f5_tts/model/backbones/: dit.py  dit_qingyu.py  dit_sft.py  m3_mmdit.py  m3_mmdit_new.py
Multilingual/src/f5_tts/train/: inference_gp.py  train.py  train_sft.py
Multilingual/src/f5_tts/train/datasets/: ipa_tokenizer.py  ipa_v2_tokenizer.py  ipa_v3_tokenizer.py  ipa_v4_tokenizer.py  ipa_v5_tokenizer.py  ipa_v6_tokenizer.py  prepare_csv_wavs.py  prepare_emilia.py  prepare_ipa.py  prepare_ipa_phase2_gen_data.py  prepare_ipa_sft.py  prepare_libritts.py  view_arrow.py
SpeakingRatePredictor/: README.md  preprocess_supplementary.md  test.ipynb
SpeakingRatePredictor/ckpts/: README.md
SpeakingRatePredictor/src/configs/: SpeedPredict_Base.yaml
SpeakingRatePredictor/src/model/: dataset.py  modules.py  speed_predictor.py  trainer.py
SpeakingRatePredictor/src/train/: train.py
SpeakingRatePredictor/src/train/datasets/: prepare_emilia_speed.py
src/MAVL_/ipa_converter/: epitran_utils.py  test.py  valid_mappings.csv
src/MAVL_/language_processors/: english.py  japanese.py
src/MAVL_/process_syllable/: english.py  japanese.py
src/MAVL_/process_syllable/syllabifier/: cmuparser3.py  phoneme_types.py  syllable3.py  syllable_types3.py  test_cases.csv
src/rate_pred/: README.md
src/rate_pred/model/: __init__.py  dataset.py  jp_syllable.py  speed_predictor.py  trainer.py  utils.py
src/rate_pred/train/: README.md  train.py
src/rate_pred/train/datasets/: prepare_multilingual_speed.py
src/srp/: README.md
src/srp/configs/: SpeedPredict_Multilingual.yaml
src/srp/model/: dataset.py  modules.py  utils.py
src/srp/train/: README.md  train.py
src/srp/train/datasets/: prepare_multiilingual_speed.py  prepare_multilingual_speed.py
src/x_voice/configs/: F5TTS_v1_Base_multilingual_full_catada_inference.yaml  F5TTS_v1_Base_multilingual_full_catada_sft.yaml  F5TTS_v1_Base_multilingual_full_catada_sft_v2.yaml  XVoice_v1_Base_Infer.yaml  XVoice_v1_Base_Stage1.yaml  XVoice_v1_Base_Stage2.yaml
src/x_voice/eval/: README.md  collect_results.py  eval_infer_batch.py  eval_multilingual.sh  eval_multilingual_seedtts.sh  eval_seedtts_testset.py  eval_similarity.py  speaking_rate_predictor.py  text_normalizer.py  utils_eval.py
src/x_voice/eval/utils/: run_wer.py
src/x_voice/infer/: README.md  infer_cli.py  infer_cli_droptext.py  infer_cli_stage1.py  infer_cli_stage2.py  infer_gradio.py  infer_gradio_backup.py  module_clf5.py  utils_infer.py
src/x_voice/model/: cfm.py  cfm_sft.py  dataset.py  modules.py  trainer_sft.py  utils.py
src/x_voice/model/backbones/: dit.py
src/x_voice/train/: inference_gp.py  train_sft.py
src/x_voice/train/datasets/: ipa_v3_tokenizer.py  ipa_v6_tokenizer.py  prepare_ipa.py  prepare_ipa_phase2_gen_data.py  prepare_ipa_sft.py
(+19 files in other folders)
