[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x-voice"
version = "0.1.0"
description = "X-Voice multilingual TTS toolkit"
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "addict",
    "accelerate>=0.33.0",
    "bg-text-normalizer",
    "bitsandbytes>0.37.0; platform_machine!='arm64' and platform_system!='Darwin'",
    "cached_path",
    "click",
    "ctranslate2==4.5.0",
    "datasets",
    "ema_pytorch>=0.5.2",
    "epitran",
    "finnsyll",
    "g2pk",
    "gradio>=6.0.0",
    "hydra-core>=1.3.0",
    "jieba",
    "fastlid",
    "librosa",
    "matplotlib",
    "nemo_text_processing",
    "num2words",
    "numpy<=1.26.4; python_version<='3.10'",
    "onnxruntime-gpu",
    "openai-whisper",
    "phonemizer",
    "pydantic<=2.10.6",
    "pydub",
    "pykakasi",
    "pypinyin",
    "pyphen",
    "pythainlp",
    "pyopenjtalk",
    "pytest-runner",
    "python-crfsuite",
    "rjieba",
    "regex",
    "safetensors",
    "simplejson",
    "soundfile",
    "tomli",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchcodec",
    "torchdiffeq",
    "tqdm>=4.65.0",
    "transformers",
    "transformers_stream_generator",
    "unidecode",
    "vocos",
    "wandb",
    "WeTextProcessing",
    "x_transformers>=1.31.14",
    "xphonebr",
    "tts-preprocess-et @ git+https://github.com/TartuNLP/tts_preprocess_et.git",
]

[project.optional-dependencies]
eval = [
    "faster_whisper==0.10.1",
    "funasr",
    "jiwer",
    "modelscope",
    "pyloudnorm"
    "zhconv",
    "zhon",
]
ipa_v4 = [
    "lingua",
    "spellchecker",
]

[project.urls]
Homepage = "https://github.com/qingyu/X-Voice"

[project.scripts]
"x-voice_infer-cli" = "x_voice.infer.infer_cli:main"
"x-voice_infer-gradio" = "x_voice.infer.infer_gradio:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["x_voice*", "srp*"]
namespaces = true

[tool.setuptools.package-data]
x_voice = [
    "configs/*.yaml",
    "infer/examples/vocab.txt",
    "infer/examples/basic/*",
    "infer/examples/multi/*",
    "infer/examples/multitest/*",
    "infer/examples/multitest_codeswitch/*",
]
srp = [
    "configs/*.yaml",
]
